user-charts/admin-b/templates/network/admin-normal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: normal
  labels:
    app: normal
spec:
  type: ClusterIP
  selector:
    app: normal
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
