user-charts/admin-b/templates/network/admin-normal-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: normal
spec:
  parentRefs:
    - name: b-cilium-gateway
      sectionName: https
      namespace: cilium
  hostnames:
    - "normal.192.168.100.244.sslip.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: normal
          port: 80
